Shift bug in tabulator table when scrollbar appears in tableholder is fixed.

--- a/front-end/src/components/Admin/Grid/index.scss
+++ b/front-end/src/components/Admin/Grid/index.scss
@@ -12,15 +12,26 @@
     font-size: 14px;
     line-height: normal;
     border-bottom: 1px solid $white !important;
+    border-right: none !important;
+
+    ::-webkit-scrollbar-track {
+      visibility: hidden;
+    }
   }
 
   &-headers {
     display: flex;
     height: 100%;
+    overflow-y: scroll;
+    border-right: none !important;
   }
 
   &-table {
     width: 100%;
+  }
+
+  &-tableHolder {
+    overflow: scroll !important;
   }
 
   &-sortable {
@@ -29,6 +40,10 @@
     justify-content: left;
     align-items: center;
     height: 100%;
+
+    :last-child {
+      border-right: none !important;
+    }
 
     &:not([aria-sort='none']) {
       background-color: #d9d5e4 !important;
